# opentcg-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/open_tcg/: deck_editor.rs  main_window.rs  mod.rs
src/open_tcg/game/: card.rs  deck.rs  mod.rs  tcg.rs
src/open_tcg/gui/: card_display.glade  card_display.rs  card_search.glade  card_search.rs  card_view.rs  deck_editor.glade  deck_editor.rs  image_manager.rs  main_window.glade  main_window.rs  mod.rs
src/open_tcg/util/: files.rs  mod.rs  xml.rs
